checksum generator code change